[gd_scene load_steps=11 format=3 uid="uid://ckoys4dftebte"]

[ext_resource type="Texture2D" uid="uid://clclrmg4osram" path="res://assets/UI/Skull.png" id="1_kpyqf"]
[ext_resource type="Script" path="res://prefab/UI/DeathScreen.gd" id="1_sx0o2"]
[ext_resource type="PackedScene" uid="uid://b70wd67qob57b" path="res://prefab/audio/PlayerDeathSound.tscn" id="2_ryr64"]
[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="2_tn60c"]
[ext_resource type="Texture2D" uid="uid://dnmhbqlysi5ph" path="res://assets/UI/red-button-normal.png" id="3_e7tme"]
[ext_resource type="Texture2D" uid="uid://cgoomtgcn04sq" path="res://assets/UI/red-button-pressed.png" id="4_1mbqd"]
[ext_resource type="Texture2D" uid="uid://cl20mjeo1aqyx" path="res://assets/UI/red-button-hover.png" id="5_tw8yf"]

[sub_resource type="Animation" id="Animation_ekgwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG/M/H/Skull:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG/M/H/V/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG/M/H/V/H:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fyfve"]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG/M/H/Skull:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG/M/H/V/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG/M/H/V/H:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_adlwd"]
_data = {
"RESET": SubResource("Animation_ekgwb"),
"show": SubResource("Animation_fyfve")
}

[node name="DeathScreen" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx0o2")
death_music_scene = ExtResource("2_ryr64")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="M" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="H" type="HBoxContainer" parent="BG/M"]
layout_mode = 2

[node name="Skull" type="TextureRect" parent="BG/M/H"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_kpyqf")
expand_mode = 1
stretch_mode = 5

[node name="V" type="VBoxContainer" parent="BG/M/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="BG/M/H/V"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.0352941, 0, 1)
theme_override_colors/font_shadow_color = Color(0.788235, 0.0470588, 0, 0.207843)
theme_override_fonts/font = ExtResource("2_tn60c")
theme_override_font_sizes/font_size = 16
text = "Du bist leider gestorben!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="H" type="HBoxContainer" parent="BG/M/H/V"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
alignment = 1

[node name="OkBtn" type="TextureButton" parent="BG/M/H/V/H"]
layout_mode = 2
texture_normal = ExtResource("3_e7tme")
texture_pressed = ExtResource("4_1mbqd")
texture_hover = ExtResource("5_tw8yf")

[node name="Label" type="Label" parent="BG/M/H/V/H/OkBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tn60c")
theme_override_font_sizes/font_size = 8
text = "Weiter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="TextureButton" parent="BG/M/H/V/H"]
layout_mode = 2
texture_normal = ExtResource("3_e7tme")
texture_pressed = ExtResource("4_1mbqd")
texture_hover = ExtResource("5_tw8yf")

[node name="Label" type="Label" parent="BG/M/H/V/H/BackBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tn60c")
theme_override_font_sizes/font_size = 8
text = "Zur√ºck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_adlwd")
}

[connection signal="button_down" from="BG/M/H/V/H/OkBtn" to="." method="_on_ok_btn_button_down"]
[connection signal="button_down" from="BG/M/H/V/H/BackBtn" to="." method="_on_back_btn_button_down"]
